--- a/package.json
+++ b/package.json
@@ -10,16 +10,21 @@
     "format": "prettier . --write"
   },
   "keywords": [],
-  "author": "",
+  "author": "JP Choyon Khan <kotjpckhan@gmail.com>",
   "license": "ISC",
   "description": "",
   "dependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/node": "^22.9.0",
+    "@typescript-eslint/eslint-plugin": "^8.14.0",
+    "@typescript-eslint/parser": "^8.14.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
+    "eslint-config-prettier": "^9.1.0",
     "express": "^4.21.1",
+    "husky": "^9.1.6",
+    "lint-staged": "^15.2.10",
     "mongoose": "^8.8.1",
     "nodemon": "^3.1.7",
     "typescript": "^5.6.3"
@@ -29,6 +34,8 @@
     "eslint": "^9.14.0",
     "globals": "^15.12.0",
     "prettier": "^3.3.3",
+    "ts-node-dev": "^2.0.0",
     "typescript-eslint": "^8.14.0"
-  }
+  },
+  "repository": "https://github.com/JPChoyon/mongoose-test.git"
 }
