--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eslint-config-prettier": "^9.1.0",
     "express": "^4.21.1",
     "husky": "^9.1.6",
+    "joi": "^17.13.3",
     "lint-staged": "^15.2.10",
     "mongoose": "^8.8.1",
     "nodemon": "^3.1.7",
