--- a/package.json
+++ b/package.json
@@ -23,20 +23,20 @@
     "dotenv": "^16.4.5",
     "eslint-config-prettier": "^9.1.0",
     "express": "^4.21.1",
-    "husky": "^9.1.6",
-    "joi": "^17.13.3",
     "lint-staged": "^15.2.10",
     "mongoose": "^8.8.1",
-    "nodemon": "^3.1.7",
     "typescript": "^5.6.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
     "eslint": "^9.14.0",
     "globals": "^15.12.0",
+    "joi": "^17.13.3",
+    "nodemon": "^3.1.7",
     "prettier": "^3.3.3",
     "ts-node-dev": "^2.0.0",
-    "typescript-eslint": "^8.14.0"
+    "typescript-eslint": "^8.14.0",
+    "zod": "^3.23.8"
   },
   "repository": "https://github.com/JPChoyon/mongoose-test.git"
 }
