user works done

--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 PORT=5000
 DATABASE_URL=mongodb+srv://mongooes-test:pLhg1FY9cGXVy0S0@cluster1.fycfdwn.mongodb.net/mongoose-first-project?retryWrites=true&w=majority&appName=Cluster1
+BYCRIPT_SALT_ROUNDS=12
+DEFAULT_PASSWORD=PHUniversity#@!
