--- a/package.json
+++ b/package.json
@@ -29,8 +29,11 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
+    "@types/bcrypt": "^5.0.2",
+    "bcrypt": "^5.1.1",
     "eslint": "^9.14.0",
     "globals": "^15.12.0",
+    "http-status": "^2.0.0",
     "joi": "^17.13.3",
     "nodemon": "^3.1.7",
     "prettier": "^3.3.3",
