--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon ./dist/app/server.js",
     "lint": "eslint src/**/*.ts",
     "lint:fix": "eslint src/**/*.ts --fix",
-    "format": "prettier . --write"
+    "format": "prettier . --write",
+    "dev": "ts-node-dev --respawn --transpile-only src/app/server.ts",
+    "build": "tsc"
   },
   "keywords": [],
   "author": "JP Choyon Khan <kotjpckhan@gmail.com>",
@@ -34,6 +34,7 @@
     "eslint": "^9.14.0",
     "globals": "^15.12.0",
     "http-status": "^2.0.0",
+    "http-status-codes": "^2.3.0",
     "joi": "^17.13.3",
     "nodemon": "^3.1.7",
     "prettier": "^3.3.3",
